# claude_template

./: .env.development  .flake8  .gitignore  .mcp.json  .mcp.json.working_local  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  AGENT_SETUP.md  BUG_FINDING_TOOL_IMPLEMENTATION_PLAN.md  CLAUDE.local.md.template  CLAUDE.md  CLAUDE_HOOK_MCP_TEST_REPORT.md  DETAILED_IMPLEMENTATION_PLAN_PHASES_2-4.md  DEVELOPMENT.md  HOOK_TEST_REQUIREMENTS.md  INSTALL_SAFETY_REPORT.md  MCP_COMPLETE_GUIDE.md  MCP_COMPREHENSIVE_ANALYSIS.md  MCP_CROSS_WORKSPACE_SETUP.md  MCP_DEPLOYMENT_CHECKLIST.md  MCP_INSTALLATION_PROMPT.md  MCP_KEY_LEARNINGS.md  MCP_SERVER_DEVELOPMENT_GUIDE.md  MCP_SERVER_TROUBLESHOOTING.md  MCP_TESTING_GUIDE.md  POSTMORTEM_CLAUDE_HOOKS_DESTRUCTION_20250123.md  POSTMORTEM_CLAUDE_INSTALLATION_FAILURE_20250120.md  POSTMORTEM_DUPLICATE_PREVENTION_FALSE_SUCCESS_20250123.md  POSTMORTEM_FAST_MODE_VIOLATION_20250121.md  POSTMORTEM_FIND_BUGS_SERVER_FAILURE_20250125.md  POSTMORTEM_MCP_SYSTEM_FAILURE_20250123.md  POSTMORTEM_MCP_TEST_FAILURE_20250119.md  POSTMORTEM_RETARD_DESTRUCTION_20250123.md  README.md  REALTIME_DUPLICATE_PREVENTION_PROPOSAL.md  REMEDIATION_PLAN_20250119_INDEXING.md  REMEDIATION_PLAN_20250121_HOOKS.md  REMEDIATION_PLAN_CODE_REVIEW_20250121.md  REMEDIATION_PLAN_HOOKS_20250121.md  (+88 more)
hooks/python/: .env.example  MANIFEST.in  README.md  __init__.py  base_guard.py  main.py  pyproject.toml  pytest.ini  registry.py  requirements-dev.txt  requirements.txt  run_meta_cognitive_tests.sh  setup.py  test_main.py  test_parallel_hooks.py
hooks/python/duplicate_prevention/: A1_6_WORKSPACE_SPECIFIC_DUPLICATE_PREVENTION.md  RED_PHASE_TEST_RESULTS.md  __init__.py  config.py  database.py  docker-compose.yml  embedding_generator.py  workspace_detector.py
hooks/python/guards/: __init__.py  assumption_detection_guard.py  awareness_guards.py  conversation_log_analyzer.py  conversation_log_guard.py  docker_env_guard.py  docker_guards.py  duplicate_prevention_guard.py  env_bypass_guard.py  false_success_guard.py  file_guards.py  git_guards.py  git_hook_protection_guard.py  install_script_prevention_guard.py  lint_guards.py  meta_cognitive_guard.py  path_guards.py  pattern_normalizer.py  (+3 more)
(+309 files in other folders)
